--- a/index.html
+++ b/index.html
@@ -15,12 +15,10 @@
     <form class="form-inline searchForm" role="form">
       <div class="form-group">
 
-        <input class="form-control" placeholder="Search Anything About Your Friends">
         <!-- STEP 5: Get rid of the one above when you uncomment the below-->
-          <!--
-        <input class="form-control" placeholder="Search Name">
-        <input class="form-control" placeholder="Search Location">
-          -->
+
+        <input class="form-control" placeholder="Search Name" ng-model="friendFilter.name">
+        <input class="form-control" placeholder="Search Location" ng-model="friendFilter.current_location.name">
 
         <select class="input-medium">
           <option>Name</option>
@@ -38,9 +36,9 @@
       </div>
     </form>
 
-    <ul ng-repeat="friend in friends">
+    <ul ng-repeat="friend in friends | filter: friendFilter">
       <li class='friend'>
-        <img class="profile-pic" ng-src='http://placebear.com/50/50.jpg'>
+        <img class='profile-pic' ng-src='{{friend.pic_square}}'>
 
         <h3>{{friend.name}}</h3>
 
