--- a/index.html
+++ b/index.html
@@ -20,23 +20,23 @@
         <input class="form-control" placeholder="Search Name" ng-model="friendFilter.name">
         <input class="form-control" placeholder="Search Location" ng-model="friendFilter.current_location.name">
 
-        <select class="input-medium">
-          <option>Name</option>
-          <option>#Friends</option>
-          <option>City</option>
-          <option>State</option>
-          <option>Country</option>
+        <select class="input-medium" ng-model="sortProp">
+          <option value="name">Name</option>
+          <option value="friend_count">#Friends</option>
+          <option value="current_location.city">City</option>
+          <option value="current_location.state">State</option>
+          <option value="current_location.country">Country</option>
         </select>
 
-        <select class="input-medium">
-          <option value="+">Descending</option>
-          <option value="-">Ascending</option>
+        <select class="input-medium" ng-model="sortDirection">
+          <option value="true">Descending</option>
+          <option value="">Ascending</option>
         </select>
 
       </div>
     </form>
 
-    <ul ng-repeat="friend in friends | filter: friendFilter">
+    <ul ng-repeat="friend in friends | filter: friendFilter | orderBy: sortProp : sortDirection">
       <li class='friend'>
         <img class='profile-pic' ng-src='{{friend.pic_square}}'>
 
